--- a/estiloux/css/estilos.css
+++ b/estiloux/css/estilos.css
@@ -17,29 +17,33 @@ header {
 }
 
 nav {
-    width: 400px;
-    height: 100%;
-    border: 3px solid black;
-}
-
-
-.layout-grid {
-    width: 100%;
-    height: 100%;
-    max-width: 992px;
-    margin: 0 auto;
-    border: 3px solid crimson;
-}
-
-.header-flex {
+    
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 400px;
+    height: 100%;  
+    /* border: 3px solid black; */
 }
-
 
 h1 {
     font-family:'Segoe UI';
     font-size: 30px;
     font-weight: 300;
     color: white;
+    /* border: 3px solid white; */
+}
+
+.layout-grid {
+    width: 100%;
+    height: 100%;
+    max-width: 992px;
+    margin: 0 auto;
+    /* border: 3px solid crimson; */
+}
+
+.header-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
