--- a/estiloux/css/estilos.css
+++ b/estiloux/css/estilos.css
@@ -4,15 +4,21 @@
     box-sizing: border-box;  
 } 
 
-
-body {
-    background-color: #EFEFEF;
+html, body {
+    height: 100%;
+    border: 2px solid crimson;
 }
 
 
-header {
+body {
+    background-color: #EFEFEF;
+    border: 2px solid blue;
+}
+
+
+header, footer {
     width: 100%;
-    height: 80px;
+    height: 10%;
     background-color: #727272;
 }
 
@@ -22,14 +28,15 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 400px;
-    height: 100%;  
+    height: 100%;
     /* border: 3px solid black; */
+    
 }
 
 h1 {
-    font-family:'Segoe UI';
-    font-size: 30px;
-    font-weight: 300;
+    font-family:Verdana, sans-serif;
+    font-size: 26px;
+    font-weight: 100;
     color: white;
     /* border: 3px solid white; */
 }
@@ -46,4 +53,60 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+nav a {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100px;
+    height: 80px;
+    color: white;
+    text-decoration: none;
+    font-family: Verdana, sans-serif;
+    transition: background-color 0.4s;
+}
+
+nav a:hover{
+    color: black;
+    text-decoration: underline;
+    font-style: italic;
+    background-color: rgba(232, 232, 232, 0.5);
+}
+
+/* ******************** M A I N ************************** */
+main {
+    width: 100%;
+    height: 80%;
+    /* border: 3px solid crimson; */
+
+}
+.main-flex {
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: white;
+    border: 2px solid rgb(0, 255, 0);
+    border: 2px solid black;
+}
+
+.harmonia {
+    width: 615px;
+    height: 100%;
+    background-color: rgb(0, 255, 0);
+    border: 2px solid black;
+}
+
+aside {
+    width: 216px;
+    height: 100%;
+    background-color: rgb(0, 255, 0);
+    border: 2px solid black;
 }
