--- a/estiloux/css/estilos.css
+++ b/estiloux/css/estilos.css
@@ -6,13 +6,13 @@
 
 html, body {
     height: 100%;
-    border: 2px solid crimson;
+    /* border: 2px solid crimson; */
 }
 
 
 body {
-    background-color: #EFEFEF;
-    border: 2px solid blue;
+    background-color: rgb(200, 200, 200);
+    /* border: 2px solid blue; */
 }
 
 
@@ -63,7 +63,7 @@ nav a {
 
     width: 100px;
     height: 80px;
-    color: white;
+    color: #A8A8A8;
     text-decoration: none;
     font-family: Verdana, sans-serif;
     transition: background-color 0.4s;
@@ -77,9 +77,13 @@ nav a:hover{
 }
 
 /* ******************** M A I N ************************** */
+
 main {
+
     width: 100%;
     height: 80%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     /* border: 3px solid crimson; */
 
 }
@@ -90,23 +94,110 @@ main {
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
 
-    background-color: white;
-    border: 2px solid rgb(0, 255, 0);
-    border: 2px solid black;
+    background-color: rgb(200, 200, 200);
+    /* border: 2px solid rgb(0, 255, 0); */
+    /* border: 2px solid black; */
 }
 
 .harmonia {
-    width: 615px;
+    width: 700px;
     height: 100%;
-    background-color: rgb(0, 255, 0);
+    background-color: white;
+    /* border: 2px solid black; */
+}
+
+.harmonia img {
+    width: 100%;
+}
+
+.harmonia h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #A8A8A8;
+    margin-top: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: small;
+    font-weight: 100;
+}
+
+.harmonia p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #A8A8A8;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: small;
+    font-weight: 100;
+}
+
+.harmonia p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #A8A8A8;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: small;
+    font-weight: 100;
+}
+
+
+aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+
+    width: 216px;
+    height: 100%;
+    background-color: rgb(200, 200, 200);
     border: 2px solid black;
 }
 
-aside {
-    width: 216px;
-    height: 100%;
-    background-color: rgb(0, 255, 0);
-    border: 2px solid black;
+aside article {
+    background-color: white;
+}
+
+aside article h3 {
+
+    width: 100%;
+    color: #A8A8A8;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 10px;
+    border-bottom: 2px solid crimson;
+}
+
+aside .buscar-box {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+aside article input, aside article button {
+    width: 100px;
+    height: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+aside article button {
+    width: 30px;
+}
+
+aside input {
+    border: 1px solid #A8A8A8;
+    outline: none;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+aside article button {
+    width: 30px;
+    background-color: #727272;
+    color: white;
+    border: none;
+    border: 1px solid #727272;
+    cursor: pointer;
 }
