--- a/estiloux/layout-fixo100.css
+++ b/estiloux/layout-fixo100.css
@@ -10,7 +10,7 @@ body {
     height: 20%;
     width: 100%;
     padding: 20px;
-    background-color: #ff7f50;
+    background-color: crimson;
     box-sizing: border-box;
 }
 .tudo {
@@ -22,13 +22,13 @@ body {
     height: 100%;
     width: 30%;
     padding: 20px;
-    background-color: #dc143c;
+    background-color: aquamarine;
     box-sizing: border-box;
 }
 .quadrado3 {
     height: 100%;
     width: 70%;
     padding: 20px;
-    background-color: #ffa07a;
+    background-color: gainsboro;
     box-sizing: border-box;
 }
